--- a/css/browse.css
+++ b/css/browse.css
@@ -1,11 +1,66 @@
-.categories-index{-webkit-font-smoothing: antialiased;
-color: #535455;
-box-sizing: inherit;
-font: inherit;
-vertical-align: baseline;
-margin: 0;
-padding: 0;
-column-gap: 1em;
-background: #ffffff;
-border: 1px solid rgba(0,0,0,0.2);
-column-count: 1;}
+.flex-container {
+    display: flex;
+}
+
+.flex-child {
+    flex: 1;
+    border: 2px solid yellow;
+} 
+
+/* Style the header with a grey background and some padding */
+.h_header {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 20px 10px;
+  }
+  
+  /* Style the header links */
+  .h_header a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+  }
+  
+  /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+  .h_header a.logo {
+    font-size: 25px;
+    font-weight: bold;
+  }
+  
+  /* Change the background color on mouse-over */
+  .h_header a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the active/current link*/
+  .h_header a.active {
+    background-color: dodgerblue;
+    color: white;
+  }
+  
+  /* Float the link section to the right */
+  .header_right{
+    float: right;
+  }
+  
+  /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+  @media screen and (max-width: 500px) {
+    .h_header a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .header_right {
+      float: left;
+    }
+  }
+
+  .br {
+      text-align: center;
+  }
