--- a/css/login.css
+++ b/css/login.css
@@ -15,7 +15,7 @@ form {
   
   /* Set a style for all buttons */
   button {
-    background-color: #04AA6D;
+    background-color: dodgerblue;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -33,7 +33,7 @@ form {
   .cancelbtn {
     width: auto;
     padding: 10px 18px;
-    background-color: #f44336;
+    background-color: grey;
   }
   
   /* Center the avatar image inside this container */
@@ -69,3 +69,64 @@ form {
       width: 100%;
     }
   }
+
+  /* Style the header with a grey background and some padding */
+.h_header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+/* Style the header links */
+.h_header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.h_header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+.h_header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+.h_header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header_right{
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .h_header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header_right {
+    float: left;
+  }
+}
+
+.login {
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+}
