--- a/css/signup.css
+++ b/css/signup.css
@@ -22,7 +22,7 @@ hr {
 
 /* Set a style for all buttons */
 button {
-  background-color: #04AA6D;
+  background-color: dodgerblue;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -39,7 +39,7 @@ button:hover {
 /* Extra styles for the cancel button */
 .cancelbtn {
   padding: 14px 20px;
-  background-color: #f44336;
+  background-color: grey;
 }
 
 /* Float cancel and signup buttons and add an equal width */
@@ -65,4 +65,64 @@ button:hover {
   .cancelbtn, .signupbtn {
     width: 100%;
   }
+}
+/* Style the header with a grey background and some padding */
+.h_header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+/* Style the header links */
+.h_header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.h_header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+.h_header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+.h_header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header_right{
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .h_header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header_right {
+    float: left;
+  }
+}
+
+.signup {
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
 }
